k8s/manifest/vpa.yaml
---
# nginx-vpa-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-vpa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-vpa
  template:
    metadata:
      labels:
        app: nginx-vpa
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
# nginx-vpa-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-vpa
spec:
  selector:
    app: nginx-vpa
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
